<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FBEFEF"
    tools:context="edu.tecii.android.final_proyect.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/TituloP"
                            android:id="@+id/textView"
                            android:textSize="30dp"
                            android:layout_gravity="center"

                            android:layout_marginBottom="10dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="230dp"
                            android:id="@+id/imageView"
                            android:layout_gravity="center"
                            android:background="@mipmap/yoshi"
                            android:layout_below="@+id/textView"
                            android:layout_centerHorizontal="true" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/Titulo2"
                            android:id="@+id/textView1"
                            android:textSize="30dp"
                            android:layout_gravity="center"

                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/imageView"
                            android:layout_centerHorizontal="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/Telefono"
                            android:id="@+id/textView3"
                            android:layout_marginTop="20dp"

                            android:layout_below="@+id/textView1"
                            android:layout_centerHorizontal="true" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/Direccion"
                            android:id="@+id/textView4"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/textView3"
                            android:layout_alignLeft="@+id/textView5"
                            android:layout_alignStart="@+id/textView5" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/Correo"
                            android:id="@+id/textView5"
                            android:layout_marginTop="10dp"

                            android:layout_below="@+id/textView4"
                            android:layout_centerHorizontal="true" />
                </LinearLayout>
        </ScrollView>

</RelativeLayout>